--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<div class="container">
+        <h1>Audio Playback</h1>
+        <button class="btn" id="applause">applause</button>
+        <button class="btn" id="boo">boo</button>
+        <button class="btn" id="laugh">gasp</button>
+        <button class="btn" id="sad_trombone">tada</button>
+        <button class="btn" id="cheer">wrong</button>
+        <button class="btn" id="cymbals">stop</button>
+		
+        <!-- <audio id="audio-player" controls></audio> -->
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
