--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 
 	<div class="container">
-        <h1>Audio Playback</h1>
+        <h1>Soundbar</h1>
         <button class="btn" id="applause">applause</button>
         <button class="btn" id="boo">boo</button>
         <button class="btn" id="laugh">gasp</button>
